@@ -459,6 +459,7 @@ pm-vacuum-former-1=Vacuum former 1
 pm-vacuum-former-2=Vacuum former 2
 pm-washing-plant-1=Washing plant 1
 pm-washing-plant-2=Washing plant 2
+pm-washing-plant-3=Washing plant 3
 pm-burner-crusher=Burner crusher
 pm-crusher-1=Crusher 1
 pm-crusher-2=Crusher 2
