@@ -50,6 +50,7 @@ Date: 2024-12-08
     - Added tintable centrifuges - credit to NullPointerExempt's mod for the code and graphics!
     - Finally added hydrogen sulfide after ignoring it for ages, it'll be used even more soon!
     - Let more fluids be burnable in the burn-inator like ammonia, sulfur dioxide/trioxide, etc
+    - Added a washing plant 3. Holy telescopic compactness batman!
 
   Changes:
     - Changed CRT's recipe to take CRT framing and screens.
